Remove transition on expand and collapse of accordion to avoid lag in animation

--- a/src/components/common/ShowMore/ShowMore.styles.css
+++ b/src/components/common/ShowMore/ShowMore.styles.css
@@ -40,13 +40,11 @@
 }
 
 .navds-show-more__content {
-  transition: height cubic-bezier(0, 0.3, 0.15, 1) 400ms;
   overflow: hidden;
   height: max-content;
 }
 
 .navds-show-more--closed .navds-show-more__content {
-  transition-duration: 0s;
   mask-image: var(--ac-show-more-mask);
   overflow: hidden;
 }
